[gd_scene load_steps=3 format=2]

[ext_resource path="res://Interface/Pause.gd" type="Script" id=1]
[ext_resource path="res://Interface/Counter.tres" type="Theme" id=2]

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.494118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 849.0
margin_top = 480.0
margin_right = 1071.0
margin_bottom = 599.0

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 222.0
margin_bottom = 37.0
theme = ExtResource( 2 )
text = "Resume"

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 222.0
margin_bottom = 78.0
theme = ExtResource( 2 )
text = "Restart"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 222.0
margin_bottom = 119.0
theme = ExtResource( 2 )
text = "Quit"
[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
